auto overflow to fix scrollbars showing on chrome

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -106,7 +106,7 @@ html {
 .task-text {
   text-align: center;
   padding: 0px 8px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 /* POPUP */
